RESOLVED FIXED 244429
[LFC][IFC] Incorrect bidi visual direction after forced line break
https://bugs.webkit.org/show_bug.cgi?id=244429
Summary [LFC][IFC] Incorrect bidi visual direction after forced line break
zalan
Reported 2022-08-27 06:43:36 PDT
when block has bidi-override
Attachments
Patch (5.42 KB, patch)
2022-08-27 06:50 PDT, zalan
no flags
Patch (6.51 KB, patch)
2022-08-27 10:06 PDT, zalan
no flags
Patch (15.88 KB, patch)
2022-08-27 14:18 PDT, zalan
no flags
zalan
Comment 1 2022-08-27 06:50:07 PDT
zalan
Comment 2 2022-08-27 10:06:48 PDT
zalan
Comment 3 2022-08-27 14:18:24 PDT
EWS
Comment 4 2022-08-27 19:51:13 PDT
Committed 253872@main (ec3d96dee371): <https://commits.webkit.org/253872@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 461930 [details].
Radar WebKit Bug Importer
Comment 5 2022-08-27 19:52:15 PDT
Note You need to log in before you can comment on or make changes to this bug.