Cherry-pick ec3d96dee371. rdar://problem/99238088

[LFC][IFC] Incorrect bidi visual direction after forced line break
    https://bugs.webkit.org/show_bug.cgi?id=244429

    Reviewed by Antti Koivisto.

    When we unwind/rewind the bidi stack at a forced line break for nested inline boxes with different unicode directives, we have to go all the way up to the block level. It ensures that the new (unicode)paragraph after the line break has the same set of unicode directives as the content before the forced line break.

    * LayoutTests/fast/text/forced-line-break-and-block-level-unicode-expected.html: Added.
    * LayoutTests/fast/text/forced-line-break-and-block-level-unicode.html: Added.
    * Source/WebCore/layout/formattingContexts/inline/InlineItemsBuilder.cpp:
    (WebCore::Layout::buildBidiParagraph):
    LineBuilder::close: Apparently this legacy quirk does not apply to bidi content.

    Canonical link: https://commits.webkit.org/253872@main

Canonical link: https://commits.webkit.org/252432.325@safari-7614-branch