Source/WebCore/layout/formattingContexts/inline/InlineLineBuilder.cpp
@@ -548,7 +548,7 @@ LineBuilder::InlineItemRange LineBuilder::close(const InlineItemRange& needsLayo
     // Legacy line layout quirk: keep the trailing whitespace around when it is followed by a line break, unless the content overflows the line.
     // This quirk however should not be applied when running intrinsic width computation.
     // FIXME: webkit.org/b/233261
-    auto shouldApplyTrailingWhiteSpaceFollowedByBRQuirk = isInIntrinsicWidthMode || !layoutState().isInlineFormattingContextIntegration()
+    auto shouldApplyTrailingWhiteSpaceFollowedByBRQuirk = isInIntrinsicWidthMode || !layoutState().isInlineFormattingContextIntegration() || m_line.contentNeedsBidiReordering()
         ? Line::ShouldApplyTrailingWhiteSpaceFollowedByBRQuirk::No
         : Line::ShouldApplyTrailingWhiteSpaceFollowedByBRQuirk::Yes;
     m_line.removeTrailingTrimmableContent(shouldApplyTrailingWhiteSpaceFollowedByBRQuirk);
